--- a/config/locales/en/views/hearings.yml
+++ b/config/locales/en/views/hearings.yml
@@ -15,7 +15,7 @@ en:
         code: Code
         heading: Court Applications
         legislation: Legislation
-        none: No court applications are associated with this case
+        none: No court applications are associated with this hearing
         received_date: Received date
         respondent_synonyms: Respondent synonyms
         result_codes: Result code
