--- a/config/locales/en/views/cookies.yml
+++ b/config/locales/en/views/cookies.yml
@@ -32,9 +32,9 @@ en:
       link_text_html: You can <a class="govuk-link" href="%{href}">adjust your cookie settings</a>.
       section_heading: Change your cookie settings
     section_analytics:
-      list_item_one: how you got to the site;
-      list_item_three: what you click on while you are visiting the site.
-      list_item_two: the pages you visit on this service and how long you were on each page, and
+      list_item_one: how you got to the site
+      list_item_three: what you click on while you are visiting the site
+      list_item_two: the pages you visit on this service and how long you were on each page
       paragraph_one: We use Google Analytics to measure how you use the website so we can improve it based on user needs. We do not allow Google to use or share the data about how you use this site.
       paragraph_three: 'Google Analytics sets the following cookies:'
       paragraph_two: 'Google Analytics sets cookies that store anonymised information about:'
