--- a/config/locales/en/views/layouts.yml
+++ b/config/locales/en/views/layouts.yml
@@ -6,9 +6,12 @@ en:
         accept_cookies: Accept analytics cookies
         analytics_cookies: We’d also like to use analytics cookies so we can understand how you use the service and make improvements.
         essential_cookies: We use some essential cookies to make this service work.
-        refuse_cookies: Refuse analytics cookies
+        reject_cookies: Reject analytics cookies
         title: Cookies on View Court Data
         view_cookies: View cookies
+        confirmation_accept: You've accepted additional cookies. 
+        confirmation_reject: You've rejected additional cookies. 
+        confirmation_link_to_settings: You can <a class="govuk-link" href="%{href}">change your cookie settings</a> at any time.
       footer:
         built_by_html: Built by <a class="govuk-footer__link" href="https://mojdigital.blog.gov.uk/"><abbr title="Ministry of Justice Digital Services">MoJ Digital Services</abbr></a>
         contact: Contact
