--- a/config/locales/en/views/layouts.yml
+++ b/config/locales/en/views/layouts.yml
@@ -4,7 +4,7 @@ en:
     application:
       cookies:
         accept_cookies: Accept analytics cookies
-        analytics_cookies: We’d also like to use analytics cookies so we can understand how you use the service and make improvements.
+        analytics_cookies: We'd also like to use analytics cookies so we can understand how you use the service and make improvements.
         confirmation_accept: You've accepted additional cookies.
         confirmation_link_to_settings: You can <a class="govuk-link" href="%{href}">change your cookie settings</a> at any time.
         confirmation_reject: You've rejected additional cookies.
@@ -12,6 +12,8 @@ en:
         reject_cookies: Reject analytics cookies
         title: Cookies on View Court Data
         view_cookies: View cookies
+        cookie_settings: Cookie settings
+        hide_message: Hide this message
       footer:
         built_by_html: Built by <a class="govuk-footer__link" href="https://mojdigital.blog.gov.uk/"><abbr title="Ministry of Justice Digital Services">MoJ Digital Services</abbr></a>
         contact: Contact
