--- a/config/locales/en/views/cookies.yml
+++ b/config/locales/en/views/cookies.yml
@@ -8,7 +8,7 @@ en:
       hint: This is the same setting as set in the cookie banner
       save_changes: Save changes
     notification_banner:
-      preferences_set: You've set your cookie preferences. <a class="govuk-notification-banner__link" href="%{href}">Go back to the page you were looking at</a>.
+      preferences_set_html: You've set your cookie preferences. <a class="govuk-notification-banner__link" href="%{href}">Go back to the page you were looking at</a>.
     page_title: Change your cookie settings
     section_intro:
       paragraph_one: Cookies are files saved on your phone, tablet or computer when you visit a website.
