--- a/config/locales/en/views/error.yml
+++ b/config/locales/en/views/error.yml
@@ -10,4 +10,6 @@ en:
     422_title: The change you wanted was rejected
     500_message: Try again later.
     500_title: Sorry, something went wrong
+    connection_error_title: fake
+    connection_error_message: fake
     description_html: You can also <a class="govuk-link" href="/">browse from the homepage</a> to find the information you need.
