Update error wording with helpdesk number

--- a/config/locales/en/views/error.yml
+++ b/config/locales/en/views/error.yml
@@ -10,5 +10,5 @@ en:
     422_title: The change you wanted was rejected
     500_message: Try again later.
     500_title: Sorry, something went wrong
-    connection_error_message: There was an error retrieving information from the server. If this problem persists, please raise an issue.
+    connection_error_message: There was a problem getting the information you requested. If this problem persists, please contact the IT Helpdesk on 0800 9175148.
     description_html: You can also <a class="govuk-link" href="/">browse from the homepage</a> to find the information you need.
