--- a/config/locales/en/views/users.yml
+++ b/config/locales/en/views/users.yml
@@ -31,6 +31,7 @@ en:
       email: Email
       name: Name
       username: Username
+      last_sign_in: Last Sign In
     index:
       action_aria: "%{name}'s account"
       delete: Delete
