AAC-465 - Add last sign in and export functionality (#879)
* Add last sign in and export functionality

* Fix linting issue

* fix broken build step

* update included tests

* Fix offence from Rubocop

--- a/config/locales/en/views/users.yml
+++ b/config/locales/en/views/users.yml
@@ -29,6 +29,7 @@ en:
     generic:
       action: Action
       email: Email
+      last_sign_in: Last Sign In
       name: Name
       username: Username
     index:
