--- a/config/locales/en/views/laa_references.yml
+++ b/config/locales/en/views/laa_references.yml
@@ -2,7 +2,7 @@
 en:
   laa_reference:
     link:
-      failure: A link to the court data source could not be created. %{error_messages}
+      failure: A Court Data Source link could not be established, due to an invalid MAAT Reference Number. Please check the MAAT Reference Number.
       form:
         maat_reference:
           hint: Enter the MAAT ID so this case can be linked to the court data source
