--- a/config/locales/en/generic.yml
+++ b/config/locales/en/generic.yml
@@ -5,6 +5,7 @@ en:
     case: Case
     continue: Continue
     defendant: Defendant
+    detail: Details
     form:
       select:
         blank_option: Please select
@@ -15,3 +16,4 @@ en:
     search: Search
     view_raw_data: View raw data
     warning: Warning
+    
