Added title to hearing events, renamed listing_info

--- a/config/locales/en/views/hearings.yml
+++ b/config/locales/en/views/hearings.yml
@@ -23,6 +23,7 @@ en:
         type: Type
       events:
         caption: Hearing events
+        title: Events
         event: Event
         time: Time
       flash:
