Aac 433 reorganise vcds hearing day page (#905)
* Created basic fragments for new components
Modified existing code to create fragments for hearing day details,
attendees and results (where applicable)
Left in hearing day page to review
May need to change margin/padding overrides

* Remove Court Applications from Hearing Day Page

* Reorganised Hearing day page with 2 column grid row

* Modified margins on left column of hearing page
Large headings set to margin-bottom-2
Body set to margin-bottom-1

* Added title to hearing events, renamed listing_info

* Added results for cracked trials to hearing day page

* Added court applications, styling changes
Moved hearing_results to 2/3 column
Brought all hearing conditional logic for rendering partials to show.html.haml for consistency
Overrided hearing_events table to have margin-bottom-9

* Refactoring grid layout pt 1
Moved 2 thirds grid layout from application.html.haml so that we have
the choice in using a 2 thirds layout vs other choices
(e.g. 1 third, 2 thirds) without issues arising from nested grids

Pages handled so far:
Homepage/Login
Forgot Password page
Password unlock instructions
Contacts page
Search Page
Search form pages (URN, ASN/NI and Name/DoB)
Search results page
Prosecution case page

Pending:
Feedback confirmation (need to test in dev)
User management pages
Defendants page

* Refactoring grid layout pt 2
Moved two thirds layout to:
Defendants (linked)
User Management page

* Updated rspec tests (Unlinked Defendant)

* Normalized locale files

* Updated rspec tests (Hearings - Attendees Partial)

* Updated rspec tests (Hearing - General)
Removed listing_info was refactored into _details so moved relevant tests to
different file name
Cracked Ineffective Trial tests moved to show.html.haml_spec.rb because the logic
was moved to that file

* Removed unused Hearing/attendees locale

--- a/config/locales/en/generic.yml
+++ b/config/locales/en/generic.yml
@@ -5,6 +5,7 @@ en:
     case: Case
     continue: Continue
     defendant: Defendant
+    detail: Details
     form:
       select:
         blank_option: Please select
