--- a/config/locales/en/views/hearings.yml
+++ b/config/locales/en/views/hearings.yml
@@ -3,7 +3,6 @@ en:
   hearings:
     show:
       attendees:
-        caption: Attendees
         defence: Defence advocates
         defendants: Defendants
         heading: Attendees
@@ -25,6 +24,7 @@ en:
         caption: Hearing events
         event: Event
         time: Time
+        title: Events
       flash:
         notice:
           no_hearing_details: No hearing details available
