--- a/config/locales/en/views/laa_references.yml
+++ b/config/locales/en/views/laa_references.yml
@@ -9,6 +9,7 @@ en:
           label: MAAT ID
         submit: Create link to court data
       success: You have successfully linked to the court data source
+      unprocessable: Unable to link the defendant using the MAAT ID.
     missing_maat_id:
       description: If you are confident that this is the correct defendant, then you can still link
       label: The MAAT id is missing
