--- a/config/locales/en/views/defendants.yml
+++ b/config/locales/en/views/defendants.yml
@@ -12,4 +12,5 @@ en:
       detail: Remove link to court data
       failure: The link to the court data source could not be removed. %{error_messages}
       success: You have successfully unlinked from the court data source
+      unprocessable: Unable to unlink this defendant
       warning: Removing the link will stop hearing updates being received
