--- a/config/locales/en/views/prosecution_case.yml
+++ b/config/locales/en/views/prosecution_case.yml
@@ -6,3 +6,4 @@ en:
       cracked_ineffective_trial:
         caption: Case results
         heading: Case results
+      failure: There was a problem getting the information you requested. If this problem persists, please contact the IT Helpdesk on 0800 9175148.
