--- a/config/locales/en/views/error.yml
+++ b/config/locales/en/views/error.yml
@@ -13,3 +13,4 @@ en:
     connection_error_message: There was a problem getting the information you requested. %{it_helpdesk}
     description_html: You can also <a class="govuk-link" href="/">browse from the homepage</a> to find the information you need.
     it_helpdesk: If this problem persists, please contact the IT Helpdesk on 0800 9175148.
+    refresh: Please refresh the page.
