Return error flash when non 200 status code received

--- a/config/locales/en/views/searches.yml
+++ b/config/locales/en/views/searches.yml
@@ -49,6 +49,9 @@ en:
       case_reference_label: Unique reference number
       defendant_name_label: Defendant name
       defendant_reference_label: Defendant ASN or National insurance number
+    error:
+      unprocessable: Unable to complete the search. Please adjust the search terms and try again.
+      failure: Unable to complete the search. Please try again in a moment.
   search_filter:
     breadcrumb: Home
     legend_text: Search for
