--- a/config/locales/en/views/searches.yml
+++ b/config/locales/en/views/searches.yml
@@ -4,6 +4,9 @@ en:
     breadcrumb: Search
     dob:
       legend_text: Defendant date of birth
+    error:
+      failure: Unable to complete the search. Please try again in a moment.
+      unprocessable: Unable to complete the search. Please adjust the search terms and try again.
     no_result:
       body: There are no matching results.
       body_guide: 'Improve your search results by:'
